--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+<title>YourNickname</title>
+<meta charSet="UTF-8" />
+<meta httpEquiv="X-UA-Compatible" content="IE=edge" />
+<meta
+  name="description"
+  content="Hey, my name is YourName. This is my personal website. Visit the website and get to know about me. You can connect with me for projects collaboration."
+/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="codecell, tsec, contact, contact us, harsh kapadia, html, css, js, vanilla css">
         <meta name="description" content="A static contact us page for TSEC CodeCell by Harsh Kapadia">
