--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-<title>YourNickname</title>
+<title>GOS Partners</title>
 <meta charSet="UTF-8" />
 <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
 <meta
@@ -10,7 +10,7 @@
 />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="codecell, tsec, contact, contact us, harsh kapadia, html, css, js, vanilla css">
-        <meta name="description" content="A static contact us page for TSEC CodeCell by Harsh Kapadia">
+        <meta name="description" content="Become a part of our GOS Partners">
         <meta name="author" content="Harsh Kapadia">
 
         <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono&display=swap" rel="stylesheet">
