--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                     <button type="submit">Send</button>
                 </div>
             </form>
+<script>
+	window.fwSettings={
+	'widget_id':153000000325
+	};
+	!function(){if("function"!=typeof window.FreshworksWidget){var n=function(){n.q.push(arguments)};n.q=[],window.FreshworksWidget=n}}() 
+</script>
+<script type='text/javascript' src='https://widget.freshworks.com/widgets/153000000325.js' async defer></script>
         </main>
 
         
