--- a/index.html
+++ b/index.html
@@ -19,18 +19,13 @@
 </head>
 <body>
     <main>
-        <div class="title">Contact us</div>
+        <div class="title">สมัคร</div>
         <div class="title-info">We'll get back to you soon!</div>
 
         <form action="https://formspree.io/f/mjkbvrqr" method="POST" class="form">
             <div class="input-group">
-                <input type="text" name="first_name" id="first-name" placeholder="First name">
-                <label for="first-name">First name</label>
-            </div>
-
-            <div class="input-group">
-                <input type="text" name="last_name" id="last-name" placeholder="Last Name">
-                <label for="last-name">Last name</label>
+                <input type="text" name="name" id="name" placeholder="First name">
+                <label for="name">First name</label>
             </div>
 
             <div class="input-group">
