--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 
         <form action="https://formspree.io/f/mjkbvrqr" method="POST" class="form">
             <div class="input-group">
-                <input type="text" name="name" id="name" placeholder="First name">
+                <input type="text" name="name" id="name" placeholder="name">
+                <label for="name">First name</label>
+            </div>
+
+            <div class="input-group">
+                <input type="text" name="How many people are in the clan?" id="people" placeholder="How many people are in the clan">
                 <label for="name">First name</label>
             </div>
 
