--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <main>
         <div class="title">สมัคร</div>
         <div class="title-info">We'll get back to you soon!</div>
+        <span style="color: red;">Please note that we will not ask you for information in the form, but rather in an email. Please provide a valid email address where we can contact you.</span>
+
 
         <form action="https://formspree.io/f/mjkbvrqr" method="POST" class="form">
             <div class="input-group">
