--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <main>
         <div class="title">สมัคร</div>
-        <div class="title-info">We'll get back to you soon!</div>
-        <span style="color: red;">Please note that we will not ask you for information in the form, but rather in an email. Please provide a valid email address where we can contact you.</span>
+       <ahref="https://help.gos.work.gd/en/article/how-to-apply-1a3bhc5/?bust=1726407175334" style="color: blue;">How to Apply</a>
+        <span style="color: red;">! Please note that we will not ask you for information in the form, but rather in an email. Please provide a valid email address where we can contact you.</span>
 
 
         <form action="https://formspree.io/f/mjkbvrqr" method="POST" class="form">
