--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 <body>
     <main>
         <div class="title">สมัคร</div>
-        <ahref="https://help.gos.work.gd/en/article/how-to-apply-1a3bhc5/" class="footer-bottom-link">how to apply</a>
+        <ahref="https://help.gos.work.gd/en/article/how-to-apply-1a3bhc5/" class="bottom-link">how to apply</a>
 
-
-        <span style="color: red;">! Please note that we will not ask you for information in the form, but rather in an email. Please provide a valid email address where we can contact you.</span>
+<span style="color: red;">! Please note that we will not ask you for information in the form, but rather in an email. Please provide a valid email address where we can contact you.</span>
 
 
         <form action="https://formspree.io/f/mjkbvrqr" method="POST" class="form">
