--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 </head>
 <body>
     <main>
-        <div class="title">สมัคร</div>
-        <ahref="https://help.gos.work.gd/en/article/how-to-apply-1a3bhc5/" class="bottom-link">how to apply</a>
+    <div class="title">สมัคร</div>
+    <a href="https://help.gos.work.gd/en/article/how-to-apply-1a3bhc5/" class="bottom-link">how to apply</a>
+</main>
 
 
         <form action="https://formspree.io/f/mjkbvrqr" method="POST" class="form">
