--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <body>
    <main>
     <div class="title">สมัคร</div>
-    <a href="https://help.gos.work.gd/en/article/how-to-apply-1a3bhc5/" class="bottom-link">how to apply</a>
+    <a href="https://help.gos.work.gd/en/article/how-to-apply-1a3bhc5/" class="bottom-link">how to apply Click on me 🫵 </a>
+
     <span style="color: red;">
         ! Please note that we will not ask you for information in the form, but rather in an email. Please provide a valid email address where we can contact you.
     </span>
